--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mystic Oracle - AI Tarot Reading</title>
+    <title>Astro Tarots- AI Tarot Reading</title>
     <meta name="description" content="Unveil the mysteries of your destiny through ancient Tarot wisdom and AI interpretation. Ask your question and let the cosmic energies guide your path." />
     <meta name="author" content="Mystic Oracle" />
 
