Add keywords meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Astro Tarots- AI Tarot Reading</title>
     <meta name="description" content="Unveil the mysteries of your destiny through ancient Tarot wisdom and AI interpretation. Ask your question and let the cosmic energies guide your path." />
     <meta name="author" content="Mystic Oracle" />
-
+    <meta name="keywords" content="tarot, tarot reading, AI tarot, astrology, fortune telling, mystic oracle, tarot cards, online tarot, destiny, AI astrology">
     <meta property="og:title" content="Mystic Oracle - AI Tarot Reading" />
     <meta property="og:description" content="Unveil the mysteries of your destiny through ancient Tarot wisdom and AI interpretation" />
     <meta property="og:type" content="website" />
